syntax = "proto3";

package greet;

option go_package = "github.com/MegalLink/grpc-go-1.18/greet/proto";


message GreetRequest{
    string first_name = 1;
    string languaje = 2;
} 

message GreetResponse{
    string result = 1;
}

service GreetService{
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
    rpc LongGreet (stream GreetRequest) returns (GreetResponse);
}